[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/Plane Sprites/ScoutPlaneSprite.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Ships2/Planes/PlaneBoid.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.36327
height = 3.32881

[sub_resource type="CircleShape2D" id=1]
radius = 14.4302

[node name="PlaneBoid" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="detection_radius" type="Area2D" parent="."]
visible = false

[node name="ViewRadius" type="CollisionShape2D" parent="detection_radius"]
shape = SubResource( 1 )

[node name="FuelTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="detection_radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="detection_radius" to="." method="_on_detection_radius_body_exited"]
[connection signal="timeout" from="FuelTimer" to="." method="_on_FuelTimer_timeout"]
